# django_react_todo

./: .gitignore  AGENTS.md  Pipfile  Procfile  README.md  package-lock.json  package.json  runtime.txt  webpack.config.js
.github/: dependabot.yml
backend/: .env.example  AGENTS.md  Pipfile  TODO.md  package.json  prisma.config.ts  pyproject.toml  pyrefly.toml  schema.yml
backend/accounts/: api.py
backend/app/: config.py  database.py  django_setup.py  exceptions.py  handlers.py  main.py
backend/app/dependencies/: auth.py  container.py
backend/app/models/: todo.py  user.py
backend/app/repositories/: todo.py
backend/app/routers/: auth.py  todo.py
backend/app/schemas/: errors.py  todo.py  user.py
backend/app/services/: auth.py  todo.py
backend/docs/: ARCHITECTURE.md
backend/frontend/static/frontend/: main.js
backend/prisma/: schema.prisma
backend/src/: app.ts
backend/src/http/auth/: routes.ts
backend/src/http/todo/: routes.ts
backend/src/infra/auth/: prisma-auth-user-repo-port.ts
backend/src/infra/prisma/: client.ts  testing.ts
backend/src/infra/todo/: prisma-todo-repo-port.ts
backend/tests/: auth-routes-error.test.ts  conftest.py  prisma-testing.test.ts  test_auth.py  test_todo.py  test_todo_completion.py  test_todo_deadline.py  test_todo_progress_status.py  test_todo_recurrence.py  test_todo_subtask_create.py  test_todo_update_schema.py
backend/tests/infra/: prisma-todo-repo-port.test.ts
backend/todo/: api.py  urls.py
backend/todo/migrations/: 0001_initial.py  0002_todo_owner.py
backend/todomanager/: settings.py  wsgi.py
docs/: nfr-workflow.md  spec-workflow.md
frontend/: .oxfmtrc.json  .oxlintrc.json  AGENTS.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.ts
scripts/: check-tooling-versions.mjs  (+1 more)
(+337 files in other folders)
