[project]
name = "django-react-todo"
version = "0.1.0"
description = "Todo アプリケーションのバックエンド"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<5.0.0",
    "autopep8>=2.3.1",
    "email-validator>=2.3.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "aiosqlite>=0.21.0",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "black>=24.10.0",

]
test = [
    "pytest>=8.0.0",
    "httpx>=0.28.0",
]

[tool.uv.sources]
